<resources>
    <string name="app_name">Attendance Manager</string>
    <string name="powered_by_your_friend_karan_rohra">Powered by your friend Karan Rohra 🤣😁</string>
    <string name="enter_subject_name_error">Please enter subject name</string>
    <string name="subject_is_already_present_warning">Subject is already present</string>
    <string name="update_activity_title">Update Information</string>
    <string name="main">Main</string>
    <string name="reset_success_msg">Reset Success</string>
    <string name="reset_title">Reset</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="update">Update</string>
    <string name="status">Status: </string>
    <string name="goal_reset">Goal: 0 %</string>
    <string name="goal_0">Goal: 0%</string>
    <string name="overall_attendance_100">Overall attendance: 100%</string>
    <string name="add_subject">Add subject</string>
    <string name="_100">100%</string>
    <string name="subject_name">Subject_name</string>
    <string name="attendance">Attendance:</string>
    <string name="_0_0">0/0</string>
    <string name="status_not_on_track">Status: Not on track</string>
    <string name="space" />
    <string name="attended_0">Attended: 0</string>
    <string name="total_classes_0">Total Classes: 0</string>
    <string name="delete_all">Delete all</string>
    <string name="reset_all">Reset all</string>
    <string name="e_g_75">e.g 75%</string>
    <string name="subject">Subject:</string>
    <string name="attended_classes">Attended Classes:</string>
    <string name="missed_classes">Missed Classes:</string>
    <string name="e_g_maths">e.g. maths</string>
    <string name="_0">0</string>
    <string name="add">Add</string>
    <string name="minimum_criteria">Minimum Criteria:</string>
    <string name="cancel">Cancel</string>
</resources>