<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/subject_name_in_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subject_name"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attendance"
                    android:textColor="#F1E8E8"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_0"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/status"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/status_not_on_track"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_100"
                    android:textColor="@color/white"
                    android:textSize="35sp" />

                <ImageButton
                    android:id="@+id/popup_menu"
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:background="#005C2A2A"
                    android:onClick="textPopUp"
                    android:scaleType="fitXY"
                    tools:src="@drawable/menu_white_dots" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|end"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/click_attend"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="#00FFFFFF"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/green_tick_in_circle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/space" />

                <ImageButton
                    android:id="@+id/click_miss"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="#00FFFFFF"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/red_cross_in_circle" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>