<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#171414"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:text="@string/goal_0"
                android:textColor="#FBFBFB"
                android:textSize="20sp"
                app:drawableLeftCompat="@android:drawable/star_big_on" />

            <TextView
                android:id="@+id/overall_attendance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overall_attendance_100"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:drawableLeftCompat="@android:drawable/checkbox_on_background" />

            <Button
                android:id="@+id/add_in_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#53D336"
                android:text="@string/add_subject"
                android:textColor="@color/purple_700" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/overall_percantage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/_100"
                android:textColor="#53D336"
                android:textSize="50sp" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/subject_list_in_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

</LinearLayout>