<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/subject_name_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subject_name"
            android:textColor="#FDFDFD"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/attended_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attended_0"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/total_classes_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_classes_0"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/edit_info_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            tools:src="@android:drawable/ic_menu_edit" />

        <ImageButton
            android:id="@+id/reset_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            tools:src="@android:drawable/ic_menu_rotate"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/delete_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            tools:src="@android:drawable/ic_menu_close_clear_cancel"
            tools:ignore="ContentDescription" />
    </LinearLayout>
</LinearLayout>